[refactor] move main code to main module, in order to avoid running tasks in deploy_compat while running tasks in main