@@ -1,79 +1,5 @@
+
 plugins {
-    id 'java'
-    id 'org.jetbrains.intellij' version '0.6.5'
-    id 'org.jetbrains.kotlin.jvm' version '1.5.31'
-}
-
-test {
-    minHeapSize = "512m" // initial heap size
-    maxHeapSize = "4096m" // maximum heap size
-    jvmArgs '-XX:MaxPermSize=152m' // mem argument for the test JVM
-}
-
-group 'com.sickworm.intellij'
-version '1.0-SNAPSHOT'
-
-sourceCompatibility = 1.8
-
-intellij {
-    updateSinceUntilBuild false
-//    version '211.7442.40' // Android 4.1.2, deployer version 27.1.1.1
-    version '212.5712.43' // Android Studio Chipmunk, deployer version 27.2.0.0
-    plugins 'android'
-}
-
-patchPluginXml.changeNotes = """
-      Hello World!
-      """
-
-runIde {
-    // default 11_0_11b1341.57 and will get Access Denied
-    jbrVersion '11_0_4b520.11'
-//    ideDirectory '/Applications/Android Studio.app/Contents'
-}
-
-buildSearchableOptions {
-    // default 11_0_11b1341.57 and will get Access Denied
-    jbrVersion '11_0_4b520.11'
-    enabled = false
-}
-
-repositories {
-    google()
-    mavenCentral()
-
-    flatDir {
-        dirs 'libs'
-    }
-}
-
-dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    // for Kotlin
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    implementation "org.jetbrains.kotlin:kotlin-reflect"
-
-    // for K2JVMCompiler
-    implementation "org.jetbrains.kotlin:kotlin-compiler-embeddable"
-    implementation "org.jetbrains.kotlin:kotlin-android-extensions"
-    // kotlinx-metadata-jvm:
-    // 0.2.0 depends kotlin-stdlib:1.4.10
-    // 0.3.0 depends kotlin-stdlib:1.5.0
-    implementation "org.jetbrains.kotlinx:kotlinx-metadata-jvm:0.3.0"
-    implementation "io.github.classgraph:classgraph:4.8.110"
-
-    implementation project(':deploy_compat:interface')
-    implementation project(':deploy_compat:v_412')
-    implementation project(':deploy_compat:v_chipmunk')
-
-    testImplementation "junit:junit:4.12"
-    testImplementation "org.mockito:mockito-core:3.3.3"
-    testImplementation "org.mockito:mockito-inline:3.3.3"
-}
-
-compileKotlin {
-    kotlinOptions.jvmTarget = "1.8"
-}
-compileTestKotlin {
-    kotlinOptions.jvmTarget = "1.8"
+    id 'org.jetbrains.intellij' version '0.6.5' apply false
+    id 'org.jetbrains.kotlin.jvm' version '1.5.31' apply false
 }
